--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Mistfall Documentation
-description: Design, build, and ship IndexedDB-first features with Mistfall’s schema DSL, typed runtime, and integrations.
+description: Design, build, and ship IndexedDB-first features with Mistfall's schema DSL, typed runtime, and integrations.
 template: splash
 hero:
   tagline: Launch production-grade IndexedDB features with a Drizzle-style schema DSL, typed runtime, and live demos.
@@ -8,10 +8,10 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: Read the overview
-      link: /overview/
+      link: /Mistfall/overview/
       icon: right-arrow
     - text: Jump into the demos
-      link: /demos/schema-dsl/
+      link: /Mistfall/demos/schema-dsl/
       icon: add-document
       variant: minimal
 ---
@@ -27,16 +27,16 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## Pick Your Path
 
 <CardGrid stagger>
-  <Card title="Quickstart" icon="rocket" href="/quickstart/">
+  <Card title="Quickstart" icon="rocket" href="/Mistfall/quickstart/">
     Copy this workflow from install → schema → island in under five minutes.
   </Card>
-  <Card title="Wire it into Astro" icon="setting" href="/integrations/astro/">
+  <Card title="Wire it into Astro" icon="setting" href="/Mistfall/integrations/astro/">
     Follow the integration checklist for client islands, SSR fallbacks, and adapters.
   </Card>
-  <Card title="Browse the API" icon="document" href="/api-reference/">
+  <Card title="Browse the API" icon="document" href="/Mistfall/api-reference/">
     Look up every builder, runtime helper, predicate, and option in one place.
   </Card>
-  <Card title="Understand the stack" icon="open-book" href="/overview/">
+  <Card title="Understand the stack" icon="open-book" href="/Mistfall/overview/">
     Review goals, architecture layers, adapters, and example entry points.
   </Card>
 </CardGrid>
@@ -51,16 +51,16 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## Tutorials to Follow
 
 <CardGrid>
-  <Card title="Full build" icon="pencil" href="/tutorials/full-guide/">
+  <Card title="Full build" icon="pencil" href="/Mistfall/tutorials/full-guide/">
     Build the entire todo dashboard step-by-step, from schema to UI.
   </Card>
-  <Card title="Tables & columns" icon="add-document" href="/tutorials/tables-and-columns/">
+  <Card title="Tables & columns" icon="add-document" href="/Mistfall/tutorials/tables-and-columns/">
     Deep dive into column builders, modifiers, and indexes.
   </Card>
-  <Card title="Querying" icon="open-book" href="/tutorials/querying/">
+  <Card title="Querying" icon="open-book" href="/Mistfall/tutorials/querying/">
     Learn every filtering, ordering, and pagination option.
   </Card>
-  <Card title="Migrations" icon="setting" href="/foundations-migrations/">
+  <Card title="Migrations" icon="setting" href="/Mistfall/foundations-migrations/">
     Upgrade schemas safely with versioned stores and automatic metadata.
   </Card>
 </CardGrid>
